# simplebyteunit

./: Cargo.toml  README.md
.forgejo/workflows/: check.yml
.github/workflows/: check.yml
src/: arithmetic.rs  input.rs  lib.rs  output.rs  simplebyteunit.rs  suffix.rs  test.rs
tests/: integration.rs
