[package]
name = "simplebyteunit"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
authors = ["Xavier Moffett <sapphirus@azorium.net>"]
repository = "https://github.com/sapphirusberyl/simplebyteunit"
description = "A thin encapsulate for integer primitives to facilitate a fast, simple, yet ergonomic byteunit implementation."
